# 2d-game

./: CMakeLists.txt  README.md
src/: main.cpp
src/framework/: Entity.h  RenderMaterial.h  Transform2D.h
src/framework/entities/: DebugEntity.cpp  DebugEntity.h
